Sun Jan 15 19:13:00 CST 2011   Christopher Martin  <belles@internode.on.net>

	* symbol.c (oSymRegsAPCS): Predefined APCS register names v6, sl and fp
	and uppercase APCS register names.
	(symbolFree): Changed parameter from Symbol* to Symbol** and
	moved list-maintenance logic into here from...
	(symbolRemove): ...here, simplfying the block that calls symbolFree.
	(Symbol_Define): Ensured that when a referenced label is actually defined,
	the Symbol struct's areaDef field is updated to reflect the current area.
	Trying to define a label in two different areas will generate an error.

Thu Jan  5 02:05:35 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* commands.c (DefineInt_RelocUpdater): Support relative relocations.
	* code.c (Code_HasUndefSymbols): Remove.
	(Code_EvalLowest.c): Factor out symbol resolving to Value_ResolveSymbol.
	* code.h (Code_HasUndefSymbols): Remove.
	* value.c, value.h (Value_ResolveSymbol): Add.
	* aoffile.h: Reposition comments.
	* fix.c (Fix_Int): Use assert instead of errorAbort.

Wed Jan  4 23:27:33 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/variables.s: Fix test.
	* area.c (c_area): Remove 2nd sanity check on AREA_REENTRANT.  Minor
	cleanup.
	* main.c (main): Adjust copyright year.

Fri Dec 30 19:00:39 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/local_label.s: Renamed to...
	* regression/tests_pass/local_label1.s: ...this.  Removed the :DEF:
	based tests.  Enhanced.
	* regression/tests_pass/local_label0.s: Add.
	* regression/tests_pass/local_label2.s: Add.
	* regression/tests_pass/local_label3.s: Add.
	* regression/tests_pass/local_label4.s: Add.
	* symbol.c (Symbol_CreateSymbolOut): Removed local label code.
	(symbolPrint): Fix printing out area symbol.
	* m_cpuctrl.c (m_adr): Evaluate all arguments even in pass one.
	* local.c, local.h: Complete rework.
	* lex.c: Follow local label API changes.
	* filestack.c (FS_GetMacroDepth): Add.
	(FS_PopPObject): Call Local_FinishMacro.